--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ qiskit_ibm_runtime==0.23.0
 qiskit_ibmq_provider==0.20.2
 qiskit_optimization==0.6.1
 rustworkx==0.14.2
-scipy==1.13.0
-setuptools==59.6.0
+scipy==1.13.1
+setuptools==70.0.0
+setuptools==70.0.0
+SQSnobFit==0.4.5
 SQSnobFit==0.4.5
